[package]
name = "transport-smoke-suite"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "1.0.98" }
chrono = { version = "0.4.40", default-features = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["derive", "env"] }
libc = { version = "0.2.171" }
regex = { version = "1.11.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "time"] }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile = { version = "3.19.1" }
